# rust-libjuju

./: .gitignore  .travis.yml  Cargo.toml  README.md  snapcraft.yaml
.github/workflows/: cargo-test.yaml
lib/: Cargo.toml  README.md
lib/src/: bundle.rs  channel.rs  charm.rs  charm_source.rs  charm_url.rs  cmd.rs  error.rs  lib.rs  paths.rs  store.rs
lib/src/local/: controller.rs  mod.rs  model.rs
lib/src/parsing/: bundle.rs  charm.rs  mod.rs
lib/src/parsing/datadir/: controller.rs  model.rs
lib/tests/: parsing_test.rs
lib/tests/examples/: bundle-basic.yaml
plugins/: Cargo.toml
plugins/src/: juju_bundle.rs  juju_kubectl.rs
snap/: snapcraft.yaml
src/: bundle.rs  channel.rs  charm.rs  charm_source.rs  charm_url.rs  cmd.rs  controller.rs  error.rs  lib.rs  paths.rs  series.rs  store.rs
src/charm_source/: charmcraft.rs  config.rs  container.rs  device.rs  metadata.rs  mod.rs  operator.rs  reactive.rs  relation.rs  resource.rs  sidecar.rs  storage.rs  v1.rs  v2.rs
src/local/: controller.rs  mod.rs  model.rs
src/yaml/: controller.rs  mod.rs  model.rs
tests/: parsing_test.rs
tests/examples/: bundle-basic.yaml  controllers.yaml  kubernetes-metadata.yaml
