[package]
name = "juju-rs"
version = "0.2.0"
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"

[lib]
name = "juju"
path = "src/lib.rs"

[dependencies]
dirs = "2.0"
ex = "0.1"
nom = "5.0"
rayon = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tempfile = "3.1"
thiserror = "1.0"
zip = "0.5"
