[package]
name = "juju-rs"
version = "0.1.0"
authors = ["Kenneth Koski <kennethkoski@gmail.com>"]
edition = "2018"

[lib]
name = "juju"
path = "src/lib.rs"

[dependencies]
dirs = "2.0"
ex = "0.1"
failure = "0.1"
nom = "5.0"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
serde = "1.0"
serde_derive = "1.0"
# serde_yaml = "0.8"
# Using local patched copy until this is resolved:
# https://github.com/chyh1990/yaml-rust/issues/140
serde_yaml = { path = "../../serde-yaml" }

